<resources>
    <string name="app_label">Messages</string>
    <string name="menu_forward">Forward</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">Multimedia message (MMS) settings</string>
    <string name="pref_sms_settings_title">Text message (SMS) settings</string>
    <string name="pref_sms_general_settings_title">General settings</string>
    <string name="pref_mms_change_over_alarm_title">MMS alert</string>
    <string name="pref_mms_change_over_alarm">Receive alerts when the mode changes to a multimedia message.</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card.</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send.</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send.</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send.</string>
    <string name="pref_summary_auto_delete">Delete old messages when the maximum number of messages is reached.</string>
    <string name="pref_summary_delete_limit">%d messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Make sounds and show icon in status bar when you receive messages</string>
    <string name="pref_title_notification_ringtone">Notification sound</string>
    <string name="pref_title_preview_message_notification">Preview message</string>
    <string name="pref_summary_preview_message_notification">Show a preview of received messages on the status bar and lock screen</string>
    <string name="pref_title_mms_add_subject_field">Add subject field</string>
    <string name="pref_summary_mms_add_subject_field">Show and allow the subject field to be edited when forwarding multimedia messages.</string>
    <string name="pref_title_mms_auto_retrieval">Auto retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages.</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming.</string>
    <string name="pref_summary_manage_smsc_messages">Message centre</string>
    <string name="pref_title_cb_activation">CB activation</string>
    <string name="pref_summary_cb_activation">Allows you to receive CB messages</string>
    <string name="pref_title_channel_configuration">Channel configuration</string>
    <string name="receiving_channel">Select channels</string>
    <string name="my_channels">My channels</string>
    <string name="add_channel">Add channel</string>
    <string name="pref_title_mms_creation_mode">Set restrictions</string>
    <string name="pref_summary_mms_creation_mode">Set restrictions for multimedia content.</string>
    <string name="pref_dialog_title_mms_creation_mode">Set restrictions</string>
    <string name="pref_title_font_size">Message font size</string>
    <string name="pref_title_split_view">Split view</string>
    <string name="pref_summary_split_view">Enable split view on landscape screen</string>
    <string name="pref_title_bubble_style">Bubble style</string>
    <string name="pref_title_background_style">Background style</string>
    <string name="pref_cb_settings_title">Cell broadcast (CB) settings</string>
    <string name="pref_title_sms_input_mode">Input mode</string>
    <string name="pref_summary_sms_input_mode">Select a text input mode for composing messages.</string>
    <string name="pref_dialog_title_sms_input_mode">Select input mode</string>
    <string name="pref_title_sms_expiry_date">Expiry date</string>
    <string name="pref_summary_sms_expiry_date">Expiry date for SMS</string>
    <string name="pref_dialog_title_sms_expiry_date">Select expiry date</string>
    <string name="pref_push_message_settings_title">Push message settings</string>
    <string name="pref_title_push_message_enabled">Push messages</string>
    <string name="pref_summary_push_message_enabled">Receive push messages from network</string>
    <string name="pref_title_service_loading_action">Service loading</string>
    <string name="pref_dialog_title_service_loading_action">Service loading</string>
    <string name="set_skin">Set skin</string>
    <string name="pref_title_notification_backlight">Screen On</string>
    <string name="pref_summary_notification_backlight">Screen on for notification alerts</string>
    <string name="pref_signature_settings_title">Signature settings</string>
    <string name="pref_title_signature_enabled">Enable signature</string>
    <string name="pref_title_signature_text">Signature text</string>
    <string name="pref_callback_title">Callback number</string>
    <string name="pref_title_callback_enabled">Enable callback number</string>
    <string name="pref_title_callback_summary">Enter a default callback number</string>
    <string name="pref_title_callback_text">Callback number</string>
    <string name="pref_msg_repetition_alert">Repeat message alert</string>
    <string name="display_settings_title">Display</string>
    <string name="pref_title_settings_cmas">Emergency alerts</string>
    <string name="cmas_test_messages">Emergency Alerts Test Messages</string>
    <string name="cmas_receive_alests">Receive Alerts</string>
    <string name="cmas_presidential_alerts">Presidential Alerts</string>
    <string name="cmas_receive_presidental_alerts">Receive Presidential Alerts</string>
    <string name="cmas_extreme_alerts">Extreme Alerts</string>
    <string name="cmas_receive_extreme_alerts">Receive Extreme Alerts</string>
    <string name="cmas_severe_alerts">Severe Alerts</string>
    <string name="cmas_receive_severs_alerts">Receive Severe Alerts</string>
    <string name="cmas_amber_alerts">Amber Alerts</string>
    <string name="cmas_receive_child_abduction_emergency_alerts">Receive Child Abduction Emergency Alerts</string>
    <string name="cmas_receive_test_alerts">Receive Test Alerts</string>
    <string name="cmas_font_size">Font Size</string>
    <string name="cmas_font_explanation">This preference allows to set the font size for CMAS message</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
    <string name="pref_title_notification_alertWhen">Alert sound</string>
    <string name="pref_summary_notification_alertWhen">Alert sound when notified</string>
    <string name="emergency_tone">Emergency tone</string>
    <string name="emergency_summary">Tap here to play the tone</string>
    <string name="cmas_reminder">Alert reminder</string>
    <string name="emergency_vibrate">Emergency vibration</string>
    <string name="emergency_vibrate_summary">Tap here to play the vibration</string>
    <string name="set_text_templates">Text templates</string>
    <string name="pref_summary_manage_SD_messages">Manage messages stored on your SD card.</string>
    <string name="pref_title_manage_SD_messages">Manage SD card messages</string>
    <string name="pref_title_send_mms_delivery_reports">Send delivery reports</string>
    <string name="pref_summary_allow_mms_delivery_reports">Allows delivery reports to be sent</string>
    <string name="expiry_date_preferences">Message validity</string>
    <string name="expiry_date_preferences_summary">MMS message validity time</string>
    <string name="message_priority">Message Priority</string>
    <string name="mms_priority_summary">MMS message priority</string>
    <string name="message_delivery_time">Delivery time</string>
    <string name="pref_title_mmsc_url">Server address</string>
    <string name="pref_title_mmsc_port">Port</string>
    <string name="pref_title_font_size_by_volume_key_enable">Change font size</string>
    <string name="pref_summary_font_size_by_volume_key_enable">Use the volume key to change the font size.</string>
    <string name="pref_delay_settings_title">Delay message sending</string>
    <string name="pref_msg_delay_alert">Delay time</string>
    <string name="pref_title_spam_option">Message block</string>
    <string name="pref_spam_message_settings_title">Spam message settings</string>
    <string name="spam_list">Spam settings</string>
    <string name="reply_all_preference_text">Group conversations</string>
    <string name="reply_all_preference_summary">Send messages as group conversations by default</string>
    <string name="cmas_notification_preive_summary">Play a sample emergency alert tone</string>
    <string name="cmas_setting_title">Emergency message settings</string>
    <string name="pref_title_notification_preview_cmas">Emergency notification preview</string>
    <string name="pref_summary_alert_cmas">Set which alert types you receive</string>
    <string name="sender_info_setting">Add sender information when forwarding</string>
    <string name="sender_info_title">Sender information</string>
    <string name="pref_summary_cmas_vibrateWhen">Vibrate for emergency alerts</string>
    <string name="sms_reassembly">Auto Combination</string>
    <string name="sms_reassembly_summary">Re-assemble multi-segment messages and show as a single message</string>
    <string name="pref_summary_notification_alertWhenSound">Play sound when emergency alerted</string>
    <string name="pref_summary_sms_restore">Restore saved messages to your inbox</string>
    <string name="pref_title_sms_restore">Restore messages</string>
    <string name="pref_summary_add_signature">Add a signature to your messages.</string>
    <string name="pref_title_mms_group_mms">Group conversation</string>
    <string name="pref_summary_mms_group_mms">Send messages as group conversations by default.</string>
    <string name="cmas_receive">Receive emergency messages</string>
    <string name="explainforCMASTitle">About emergency messages</string>
    <string name="pref_truncate_long_messages_summary">Tap More to view the full text of truncated messages</string>
    <string name="pref_truncate_long_messages_title">Truncate long messages</string>
    <string name="add_to_spam_numbers">Add to spam numbers</string>
    <string name="add_to_spam_phrases">Add to spam phrases</string>
    <string name="spam_numbers_summary">Add numbers you want to register as spam.</string>
    <string name="spam_phrases_summary">Add phrases you want to register as spam.</string>
    <string name="cmas_exercise_message">CMAS Exercise Message</string>
    <string name="receive_cmas_exercise_message">Receive cmas exercise message</string>
    <string name="cmas_operator_defined_message">CMAS Operator Defined Message</string>
    <string name="receive_cmas_operator_defined_message">Receive cmas operator defined message</string>
    <string name="pref_summary_message_popup">Show new messages in pop-ups if an application is open on the screen.</string>
    <string name="pref_title_message_popup">Pop-up display</string>
    <string name="priority_sender">Priority senders</string>
    <string name="pref_title_open_links_from_unknown_senders">Allow access to all links</string>
    <string name="pref_title_open_links_from_unknown_senders_summary">Allows links in messages to be opened.</string>
</resources>