<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/pref_title_cb_activation" android:key="pref_key_cb_settings_activation_sim2" android:summary="@string/pref_summary_cb_activation" />
    <ListPreference android:entries="@array/pref_entries_cb_selection" android:title="@string/receiving_channel" android:key="pref_key_cb_channel_selection2" android:defaultValue="All channels" android:dialogTitle="@string/receiving_channel" android:entryValues="@array/pref_entry_values_cb_selection" />
    <PreferenceCategory android:title="@string/my_channels" android:key="pref_key_cb_my_channels2">
        <Preference android:title="@string/add_channel" android:key="add_my_channel2" />
    </PreferenceCategory>
</PreferenceScreen>